新增验证码，邮箱验证注册和登录

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -41,6 +41,7 @@
 
                   <div>
                   <a href="/register/" class="text-success"><ins>新用户注册</ins></a>
+                  <!-- submit提交表单action到服务器 -->
                   <button type="submit" class="btn btn-primary float-right">登录</button>
                 </div>
               </form>
